--- a/cluster/apps/pihole/pihole/helm-release.yaml
+++ b/cluster/apps/pihole/pihole/helm-release.yaml
@@ -27,7 +27,11 @@ spec:
       pullPolicy: Always
     admin:
       existingSecret: "pihole-secrets"
-      passwordKey: "ADMIN_PASSWORD" 
+      passwordKey: "ADMIN_PASSWORD"
+    resources:
+      requests:
+       cpu: 10m
+       memory: 128Mi
     DNS1: "208.67.222.222"
     #DNS2: "1.1.1.1"
     DNS2: "2620:119:35::35"
@@ -347,6 +351,3 @@ spec:
           repository: ekofr/pihole-exporter
           tag: v0.3.0
           pullPolicy: IfNotPresent
-        resources:
-          limits:
-            memory: 128Mi
