--- a/cluster/core/cert-manager/helm-release.yaml
+++ b/cluster/core/cert-manager/helm-release.yaml
@@ -29,3 +29,7 @@ spec:
         - "192.168.178.202"
         - "1.1.1.1"
         - "9.9.9.9"
+    resources:
+      requests:
+        cpu: 15m
+        memory: 60Mi
