Set requests for monitoring

--- a/cluster/apps/monitoring/blackbox-exporter/helm-release.yaml
+++ b/cluster/apps/monitoring/blackbox-exporter/helm-release.yaml
@@ -28,6 +28,11 @@ spec:
           timeout: 30s
           icmp:
             preferred_ip_protocol: "ip4"
+    
+    resources:
+      requests:
+        cpu: 2m
+        memory: 16Mi
     serviceMonitor:
       enabled: true
       defaults:
