--- a/cluster/apps/default/tandoorrecipes/sts-postgresql.yaml
+++ b/cluster/apps/default/tandoorrecipes/sts-postgresql.yaml
@@ -69,6 +69,8 @@ spec:
           requests:
             cpu: 10m
             memory: 32Mi
+          limits:
+            memory: 64Mi
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
