Set memory limits for weave gitops dashboard

--- a/cluster/apps/flux-system/weave/weave-gitops-dashboard.yaml
+++ b/cluster/apps/flux-system/weave/weave-gitops-dashboard.yaml
@@ -31,6 +31,8 @@ spec:
       requests:
         cpu: 100m
         memory: 50Mi
+      limits:
+        memory: 100Mi
     ingress:
       enabled: true
       className: "traefik"
