--- a/cluster/apps/miniflux/deployment.yaml
+++ b/cluster/apps/miniflux/deployment.yaml
@@ -52,7 +52,9 @@ spec:
         resources:
           requests:
             cpu: 5m
-            memory: 32Mi
+            memory: 25Mi
+          limits:
+            memory: 64Mi
         env:
           - name: DATABASE_URL
             valueFrom:
