Set memory limits for monitoring stack

--- a/cluster/apps/monitoring/alertmanager-discord/deployment.yaml
+++ b/cluster/apps/monitoring/alertmanager-discord/deployment.yaml
@@ -25,6 +25,8 @@ spec:
             requests:
               cpu: 1m
               memory: 8Mi
+            limits:
+              memory: 16Mi
           ports:
             - name: http
               protocol: TCP
