Set memory limits for traefik

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -76,5 +76,7 @@ spec:
         enabled: false
     resources:
       requests:
-        memory: 60Mi
+        memory: 50Mi
         cpu: 40m
+      limits:
+        memory: 100Mi
