Set memory limits for cert-manager

--- a/cluster/core/cert-manager/helm-release.yaml
+++ b/cluster/core/cert-manager/helm-release.yaml
@@ -31,5 +31,7 @@ spec:
         - "9.9.9.9"
     resources:
       requests:
-        cpu: 15m
+        cpu: 5m
         memory: 60Mi
+      limits:
+        memory: 128Mi
