Set memory limits for nfs system

--- a/cluster/core/nfs-subdir-external-provisioner/helm-release.yaml
+++ b/cluster/core/nfs-subdir-external-provisioner/helm-release.yaml
@@ -55,6 +55,9 @@ spec:
       name:
     resources:
       requests:
-       cpu: 5m
-       memory: 15Mi
+        cpu: 5m
+        memory: 13Mi
+      limits:
+        memory: 32Mi
+      
     labels: {}
