--- a/cluster/apps/argocd/argocd/kustomization.yaml
+++ b/cluster/apps/argocd/argocd/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 resources:
   - helm-release.yaml
   - argocd-secrets.sops.yaml
+  - recipes-helm-secrets.sops.yaml
+  - recipes-argocd-app.yaml
