Test values from secret

--- a/cluster/apps/argocd/argocd/recipes-argocd-app.yaml
+++ b/cluster/apps/argocd/argocd/recipes-argocd-app.yaml
@@ -16,6 +16,8 @@ spec:
     targetRevision: develop
     helm:
       values:
-        - secretRef:
-            name: recipes-helm-secrets
-            key: helm-values
+        valueFrom:
+          secretKeyRef:
+          - secretRef:
+              name: recipes-helm-secrets
+              key: helm-values
