Update grafana ldap settings

--- a/cluster/apps/monitoring/grafana/helm-release.yaml
+++ b/cluster/apps/monitoring/grafana/helm-release.yaml
@@ -44,9 +44,7 @@ spec:
       grafana_net:
         url: https://grafana.net
       auth.anonymous:
-        enabled: true
-        org_id: 1
-        org_role: Viewer
+        enabled: false
       auth.ldap:
         enabled: true
         allow_sign_up: true
