Add namespace to watch for hajimari

--- a/cluster/apps/hajimari/hajimari/helm-release.yaml
+++ b/cluster/apps/hajimari/hajimari/helm-release.yaml
@@ -35,6 +35,7 @@ spec:
           - argocd
           - flux-system
           - miniflux
+          - scraang
       title: Start
       name: "you"
       customApps:
