--- a/cluster/apps/hajimari/hajimari/helm-release.yaml
+++ b/cluster/apps/hajimari/hajimari/helm-release.yaml
@@ -66,6 +66,8 @@ spec:
           hajimari.io/enable: "false"
           hajimari.io/icon: "weather-sunset"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          cert-manager.io/private-key-secret-name: "root-secret"
         hosts:
           - host: "start.${SECRET_DOMAIN}"
             paths:
@@ -74,7 +76,7 @@ spec:
         tls:
           - hosts:
               - "start.${SECRET_DOMAIN}"
-            secretName: "tls-wildcard-secret"
+            secretName: "tls-hajimari-secret"
     persistence:
       data:
         enabled: true
