--- a/cluster/apps/argocd/argocd/kustomization.yaml
+++ b/cluster/apps/argocd/argocd/kustomization.yaml
@@ -6,3 +6,4 @@ resources:
   - argocd-secrets.sops.yaml
   # - recipes-helm-secrets.sops.yaml
   # - recipes-argocd-app.yaml
+  - scraang-argocd-app.yaml
