--- a/cluster/apps/argocd/argocd/helm-release.yaml
+++ b/cluster/apps/argocd/argocd/helm-release.yaml
@@ -72,9 +72,9 @@ spec:
               labels:
                 severity: warning
               annotations:
-                summary: "[{{`{{$labels.name}}`}}] Application not synchronized"
+                summary: "Application {{$labels.name}} not synchronized"
                 description: >
-                  The application [{{`{{$labels.name}}`}} has not been synchronized for over
+                  The application {{ $labels.name }} has not been synchronized for over
                   12 hours which means that the state of this cloud has drifted away from the
                   state inside Git.
           selector:
