--- a/cluster/apps/argocd/argocd/helm-release.yaml
+++ b/cluster/apps/argocd/argocd/helm-release.yaml
@@ -72,11 +72,22 @@ spec:
               labels:
                 severity: warning
               annotations:
-                summary: "Application {{$labels.name}} not synchronized"
+                summary: "Application {{ $labels.name }} not synchronized"
                 description: >
                   The application {{ $labels.name }} has not been synchronized for over
                   12 hours which means that the state of this cloud has drifted away from the
                   state inside Git.
+            - alert: ArgoAppNotHealthy
+              expr: |
+                argocd_app_info{health_status!="Healthy"} == 1
+              for: 15m
+              labels:
+                severity: critical
+              annotations:
+                summary: "Application {{ $labels.name }} not healthy"
+                description: >
+                  The application {{ $labels.name }} has not been healthy for over
+                  15 minutes.
           selector:
             prometheus: kube-prometheus-stack
           namespace: monitoring
