--- a/cluster/apps/argocd/argocd/helm-release.yaml
+++ b/cluster/apps/argocd/argocd/helm-release.yaml
@@ -68,14 +68,14 @@ spec:
             - alert: ArgoAppNotSynced
               expr: |
                 argocd_app_info{sync_status!="Synced"} == 1
-              for: 12h
+              for: 1h
               labels:
                 severity: warning
               annotations:
                 summary: "Application {{ $labels.name }} not synchronized"
                 description: >
                   The application {{ $labels.name }} has not been synchronized for over
-                  12 hours which means that the state of this cloud has drifted away from the
+                  1 hour which means that the state of this cloud has drifted away from the
                   state inside Git.
             - alert: ArgoAppNotHealthy
               expr: |
