Disable sidecar exporter

--- a/cluster/apps/pihole/pihole/helm-release.yaml
+++ b/cluster/apps/pihole/pihole/helm-release.yaml
@@ -347,7 +347,7 @@ spec:
       podMonitor:
         enabled: true
       sidecar:
-        enabled: true
+        enabled: false
         port: 9617
         image:
           repository: ekofr/pihole-exporter
