--- a/cluster/core/metallb-system/helm-release.yaml
+++ b/cluster/core/metallb-system/helm-release.yaml
@@ -10,15 +10,40 @@ spec:
     spec:
       # renovate: registryUrl=https://metallb.github.io/metallb
       chart: metallb
-      version: 0.12.1
+      version: 0.13.10
       sourceRef:
         kind: HelmRepository
         name: metallb-charts
         namespace: flux-system
   values:
-    configInline:
-      address-pools:
-        - name: default
-          protocol: layer2
-          addresses:
-            - "${METALLB_LB_RANGE}"
+    # controller contains configuration specific to the MetalLB cluster
+    # controller.
+    controller:
+      enabled: true
+      logLevel: info
+      resources:
+        limits:
+          cpu: 100m
+          memory: 100Mi
+        requests:
+          cpu: 10m
+          memory: 32Mi
+
+    speaker:
+      enabled: true
+      logLevel: info
+
+      resources:
+        limits:
+          cpu: 100m
+          memory: 100Mi
+        requests:
+          cpu: 10m
+          memory: 30Mi
+
+      frr:
+        enabled: false
+
+    crds:
+      enabled: true
+      validationFailurePolicy: Fail
