--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -22,6 +22,7 @@ resources:
   - node-feature-discovery-charts.yaml
   - prometheus-community-charts.yaml
   - rook-ceph-charts.yaml
+  - rocketchat-charts.yaml
   - stakater-charts.yaml
   - traefik-charts.yaml
   - weaveworks-kured-charts.yaml
