--- a/cluster/base/flux-system/kustomization.yaml
+++ b/cluster/base/flux-system/kustomization.yaml
@@ -22,3 +22,4 @@ resources:
   - ./charts/helm/pihole-charts.yaml
   - ./charts/helm/weave-gitops.yaml
   - ./charts/helm/mondoo-charts.yaml
+  - ./charts/helm/rocketchat-charts.yaml
