--- a/cluster/apps/rocketchat/rocketchat/helm-release.yaml
+++ b/cluster/apps/rocketchat/rocketchat/helm-release.yaml
@@ -39,7 +39,13 @@ spec:
         size: 1Gi
 
       volumePermissions: { enabled: true }
-
+      resources:
+        requests:
+          memory: 64Mi
+          cpu: 100m
+        limits:
+          memory: 512Mi
+          cpu: 300m
     persistence:
       enabled: true
       storageClass: "nfs-client"
@@ -48,7 +54,7 @@ spec:
 
     resources:
       requests:
-        memory: 512Mi
+        memory: 64Mi
         cpu: 100m
       limits:
         memory: 512Mi
