Use ARM image for mongodb

--- a/cluster/apps/rocketchat/rocketchat/helm-release.yaml
+++ b/cluster/apps/rocketchat/rocketchat/helm-release.yaml
@@ -21,6 +21,10 @@ spec:
       namespace: nfs-system
   values:
     mongodb:
+      image:
+        registry: ghcr.io
+        repository: zcube/bitnami-compat/mongodb
+        tag: 6.0-debian-11-r64
       useStatefulSet: true
       auth:
         rootPassword: rocketchatroot
