--- a/cluster/apps/rocketchat/rocketchat/helm-release.yaml
+++ b/cluster/apps/rocketchat/rocketchat/helm-release.yaml
@@ -24,7 +24,7 @@ spec:
       image:
         registry: ghcr.io
         repository: zcube/bitnami-compat/mongodb
-        tag: 6.0-debian-11-r64
+        tag: 6.0.5-debian-11-r64-arm64-squash
       useStatefulSet: true
       auth:
         rootPassword: rocketchatroot
