--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
 #  - mondoo-operator
   - monitoring
   - networking
-  - rocketchat
+#  - rocketchat
   - pihole
   - scraang
   - system-upgrade
