Fix key for helm values

--- a/cluster/apps/monica/monica/argocd-app.yaml
+++ b/cluster/apps/monica/monica/argocd-app.yaml
@@ -14,7 +14,7 @@ spec:
     chart: monica
     repoURL: 'https://github.com/nliakm/helm-charts.git'
     helm:
-      values:
+      valuesObject:
         ingress:
           enabled: true
           className: traefik
