--- a/cluster/apps/monica/monica/argocd-app.yaml
+++ b/cluster/apps/monica/monica/argocd-app.yaml
@@ -15,7 +15,7 @@ spec:
     repoURL: 'https://nliakm.github.io/helm-charts'
     targetRevision: 1.0.6
     helm:
-      valuesObject:
+      values: |
         image:
           repository: monica
           tag: 4.0.0-fpm-alpine
