--- a/cluster/apps/hajimari/hajimari/helm-release.yaml
+++ b/cluster/apps/hajimari/hajimari/helm-release.yaml
@@ -31,6 +31,7 @@ spec:
         matchNames:
           - default
           - networking
+          - monica
           - monitoring
           - argocd
           - flux-system
