--- a/cluster/apps/argocd/argocd/argocd-image-updater.yaml
+++ b/cluster/apps/argocd/argocd/argocd-image-updater.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/name: argocd-image-updater
     app.kubernetes.io/part-of: argocd-image-updater
   name: argocd-image-updater
-  namespace: argocod
+  namespace: argocd
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -16,7 +16,7 @@ metadata:
     app.kubernetes.io/name: argocd-image-updater
     app.kubernetes.io/part-of: argocd-image-updater
   name: argocd-image-updater
-  namespace: argocod
+  namespace: argocd
 rules:
 - apiGroups:
   - ""
@@ -51,7 +51,7 @@ metadata:
     app.kubernetes.io/name: argocd-image-updater
     app.kubernetes.io/part-of: argocd-image-updater
   name: argocd-image-updater
-  namespace: argocod
+  namespace: argocd
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -67,7 +67,7 @@ metadata:
     app.kubernetes.io/name: argocd-image-updater-config
     app.kubernetes.io/part-of: argocd-image-updater
   name: argocd-image-updater-config
-  namespace: argocod
+  namespace: argocd
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -76,7 +76,7 @@ metadata:
     app.kubernetes.io/name: argocd-image-updater-ssh-config
     app.kubernetes.io/part-of: argocd-image-updater
   name: argocd-image-updater-ssh-config
-  namespace: argocod
+  namespace: argocd
 ---
 apiVersion: v1
 kind: Secret
@@ -85,7 +85,7 @@ metadata:
     app.kubernetes.io/name: argocd-image-updater-secret
     app.kubernetes.io/part-of: argocd-image-updater
   name: argocd-image-updater-secret
-  namespace: argocod
+  namespace: argocd
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -95,7 +95,7 @@ metadata:
     app.kubernetes.io/name: argocd-image-updater
     app.kubernetes.io/part-of: argocd-image-updater
   name: argocd-image-updater
-  namespace: argocod
+  namespace: argocd
 spec:
   selector:
     matchLabels:
