Add registry to config

--- a/cluster/apps/argocd/argocd/argocd-image-updater.yaml
+++ b/cluster/apps/argocd/argocd/argocd-image-updater.yaml
@@ -68,6 +68,13 @@ metadata:
     app.kubernetes.io/part-of: argocd-image-updater
   name: argocd-image-updater-config
   namespace: argocd
+data:
+  registries.conf: |
+    registries:
+    - name: GitHub Container Registry
+      api_url: https://ghcr.io
+      prefix: ghcr.io
+      insecure: yes
 ---
 apiVersion: v1
 kind: ConfigMap
