Add volume mount

--- a/cluster/apps/argocd/argocd/helm-release.yaml
+++ b/cluster/apps/argocd/argocd/helm-release.yaml
@@ -105,14 +105,14 @@ spec:
       name: dex-server
 
       # # -- Additional volumeMounts to the dex main container
-      # volumeMounts:
-      #   - name: static-files
-      #     mountPath: /shared
+      volumeMounts:
+        - name: static-files
+          mountPath: /shared
 
       # # -- Additional volumes to the dex pod
-      # volumes:
-      #   - name: static-files
-      #     emptyDir: {}
+      volumes:
+        - name: static-files
+          emptyDir: {}
 
       # -- Resource limits and requests for dex
       resources:
