--- a/cluster/apps/monitoring/kustomization.yaml
+++ b/cluster/apps/monitoring/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - namespace.yaml
   - monitoring-secrets.sops.yaml
   - kube-prometheus-stack
-  - blackbox-exporter
+  # - blackbox-exporter
   - alertmanager-discord
 #  - loki
   - grafana
