--- a/cluster/apps/argocd/argocd/helm-release.yaml
+++ b/cluster/apps/argocd/argocd/helm-release.yaml
@@ -42,7 +42,7 @@ spec:
           cpu: 150m
           memory: 250Mi
         limits:
-          memory: 400MI
+          memory: 400Mi
 
       ## Application controller metrics configuration
       metrics:
