Get rid of encrypted CM

--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,16 +5,18 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:hquC/vDeEA==,iv:DEOKfZStiDuckJ+L6DkW2seXYj81i2Huh0j6yof5wbc=,tag:ysbOHkJ4AxmIPzRdb51HrQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:A5TzBGMcDd/8MODSJs3ac6/n,iv:+zvdrOIzDEPR9KVMCUWEOPiOMvnMe1/3zlkYZa6d5Zg=,tag:YDKic9DAxrjjSWAjYNJx2w==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:fgRqrnDM3CsbjbReGM0=,iv:HrSXhmvKFnBN/CCXNbcPfp2NLFAyrSfXvNuW04dSoKc=,tag:r3BE8TDUB0YbnDJBvAFaeg==,type:str]
-    NFS_PATH: ENC[AES256_GCM,data:jdflNEgxQG720YrH/BGZGg==,iv:3Nuiu7DJd8e6SFccG8irm0Gp1mDarzNuhrZSvftVY9s=,tag:SxdRKiQNm/uCwpb9QX/h9g==,type:str]
-    PIHOLE_SERVER: ENC[AES256_GCM,data:4Ah8gQIf1ZwgVkEJcmQ=,iv:1/vTIXXaHZ1V/eAWlj0C6O6nqCCesE05XFv8peRi48w=,tag:GPabBszgLAy1U4cFhiV/3g==,type:str]
-    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:83LEXGLuCBQav2LCmg==,iv:woDU1F/axZkvU6ApQXVTzXEmQDxoWDTKzja7KPxVLxs=,tag:LTqSIUwq2vMgyqd0Vn1JiA==,type:str]
-    GATEWAY_ADDR: ENC[AES256_GCM,data:Z1M88LhpvKVTpd/3cg==,iv:8oyGwG+wvKvathkhrgAa5PVgnVVglquZFCkxzFgiTZg=,tag:m1ACF/Er4fkOQCDr7GF11Q==,type:str]
-    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:D+ITbyApJrRdAge8RPHt3M1SQK2gN1xEjLx7vVn+n7cfQhYoSjbvk994V2/Fv2Ma5XSPRe5f84674AmcUy2CUBQC82ZRRhK583ex+VOcPgNHWEE+InAl8H/LCadMhzfwsEgVK1i6UvDidXYplZSLAzntPsWVaQAwbAvVA997SRVwDtB2Zx0KjgLZGkgwFGWC2PRoqQ2ZUTd5rP0vPyCE9Gb4EEidxrS9kH7ckd35F0E5GACxH2HU,iv:MS0ig5c3m3mB74Z2S+6lmS/ozvZSsEwXnmt35aykj70=,tag:7Hjq2kmiMvGYhfuPjmkGKA==,type:str]
-    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:hChpUck=,iv:7rtx2s7plky9hZmznU9jxseMa0JQXvoNKH2y0PO0yXY=,tag:VU2QRdhA9+RxqC03vDz7Dg==,type:str]
-    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:S1X83ttRB0Wjz/GwESJPtQ==,iv:rvhMchQUrFWFsvnkbR8hTAzfY5BiXfRsAlqM79IqLx4=,tag:2umjmkq2vYXJwPsTa6/ZLg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:r5NUzNvQPQ==,iv:AVktmIo1ue3nqqntD7dZ0MPTiYKNOBQHLthOs+KVQaA=,tag:IDI66MoKQj5J1awhHq9aVg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:lWoabqEW/aSihSTesuthIgHe,iv:B3Paib9k6FI6EpbUw0IZzrywK6d0wImSZTQ65CvCJw0=,tag:W/tYsKvM2o0PwTmBeU8JTA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:VY9CAZ0Urpmz6LrOLgw=,iv:BrqQx4GBgA9z77tQG+g6n9nzUC0s0QLtWV2c/LfEKRU=,tag:iQz30v+TLEezOJajIzU1Iw==,type:str]
+    NFS_PATH: ENC[AES256_GCM,data:LVGpS8ILvu05dIrbJ97iVQ==,iv:bsx7anoF6+KYkSHumN9Bm/3tg4rU5pjK/sDFamFFZsQ=,tag:KaYKJxU1QwNVLbhdp+B7Fw==,type:str]
+    PIHOLE_SERVER: ENC[AES256_GCM,data:Qc3hpOAj2mG7xR3PjPo=,iv:CSUnm3fcIroD0YxQt6ERuL456SWxPBBA47LGE72riFs=,tag:VAz8NH2ISddDX+/ukQ2JcA==,type:str]
+    HOME_ASSISTANT_SERVER: ENC[AES256_GCM,data:V8gupj50gM9TEJ+tOQ==,iv:KGQ0LAezcfeg5nfbDXMfb03ohQ37p98uddq6R13TBkM=,tag:WA24bIsLrZXsaccPDiFyyg==,type:str]
+    GATEWAY_ADDR: ENC[AES256_GCM,data:frFRVc2YffNkO/Ezuw==,iv:q1hiF5IiBVsWQMsc7Nj3rQYXGI9UtduPV5duhVkeQl8=,tag:/evmHFTAc95H0cnjhHj6Vw==,type:str]
+    HOME_ASSISTANT_BEARER: ENC[AES256_GCM,data:aoCLHF7kE9WJfTsKqcILbG09AL79rJbWRdbYaXBp7uK+P+YJnU9GGf12AGt5GDmuogjrl4IbEeY81PajQvjByRWdwdYiSPx/UeYKogx1hkg63zs8WiZ9i3fTL5DIYJjKwOiqWaymTWt6Gh8+zbaWxX6YAuBQRQucA8OFanGj3zODgtT8CLGI1uFQOdJAZu00DmQZFE0si2UX3N6V9RfuDVBGV2uJDdlmks27ZjjB2BZwQgVHUdoQ,iv:7hMYcQWe+jYHBJJrNWlMCKoHhYBKD00vfqt3mlfuXhc=,tag:/5rT44eeYSq9MechYRMOXw==,type:str]
+    SECRET_GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:KRuiWw8=,iv:/kYJo9+iDVkyi5geteIMgt5fdCQ73pSyL0nc3g+nkfk=,tag:WBtzjQblVtNVS9zln4K4Mg==,type:str]
+    SECRET_GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:MrBEVevwnbzGeyziXnJ1TA==,iv:Bzw+5rNYH0NqOdddT6dngjK160puVtUot8qp7SYv+dg=,tag:8x14VZhR6hIcGni30uDd2Q==,type:str]
+    METALLB_LB_RANGE: ENC[AES256_GCM,data:W4yMf90UTIAZnFXz7ptHlvNp8nvmxTUXUWwOAbK/AA==,iv:Qqw1F2PtGvJ39a7kU4Z042nnSQpSdN1djbaHoMbSuU0=,tag:EUGRVg7ltyp4c6O4K1pHxA==,type:str]
+    METALLB_TRAEFIK_ADDR: ENC[AES256_GCM,data:UmSLQ7doPK3Ggsyl72Rc,iv:iN8oDzqz8rmko3ifXGfGF1mKMpIVNmMngsiKPa2pWTA=,tag:2YUY58nx/raDh6eAidIrfQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,14 +26,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxSzh0WVBpSGwvbkZTR1hP
-            S2NDT1RWeTA5L3pnVGZuRFI4YkswYm1tampFCmhhcXRnbkJaVVMxeDI4UHdCbmk2
-            cWlyT1FBbVVNS3ZWMGZRbm9QNzFUK0UKLS0tIGtmRGFSZW1xYUxLNUNjRE1CVFc5
-            a0o5cmQvRGVmRENiaVdXam5PNm9FTlUKDyTw8VtanEUSS0M9YzoxkfLwganhA2mv
-            4U3dPVXkvB1BStdKo2nROPYf+PmxwbhSvKaoOC6vteazMb4RAdra3Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTNjVxU1VGNG05VEptWjZO
+            OVdkWnB4aHltMjdWL0x1ajBWU1ZsS1UwVTJFCmc2MW1KMmNHb2htWWxKZTZDeUE4
+            anFMZXV2STZqQ0pCemtBS0lQT1ZkZHMKLS0tIHk0NmdtdHM0cHgza1ovVnFXcm5J
+            VWw1N2ZCTThHT2tIWUVDcW1nOXdTYmsK2XqAzvroJGlMCBgLhDnROACQL/LAgPQn
+            yXZ+eKsjnlQf9ngdLBJy/gW2LwyCbBtIO/FxytL5DEHrG8TKnV1k/Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-23T07:40:00Z"
-    mac: ENC[AES256_GCM,data:+1gHr0pbC9oEjD3E29bmWfpBflQ4y+I0AKbj07O3kk10HQveYBRzS2QM0xTqu4EIXiwLg6PLxekGRHVFH6as4UDh0sToWIH9ippPMrD/woMlQoV4V0u/qslaQJFGanRcfG8g/k63H1a8grWdQAgAKXHrN/Tcmh9UrFKRBqi+jLw=,iv:FyBRZQLg0jeXj6FmbTTsClxyfmk1TToQK0qO7u8eMuk=,tag:82fqqIPX6oKxRYyFIXoHNA==,type:str]
+    lastmodified: "2023-09-06T14:36:44Z"
+    mac: ENC[AES256_GCM,data:5xWQ1FX+6iVR4hfk/lfwo0SJDaSViPXF2V86IuZqZEcHdE5TWwh9F6ZxDlICKB0vHRe453suPiMQ0Rg6oJZ2SwAcdXU1z2CgQW1CHQpyxBAgoESNDzxeHduE/6BatQFGh54/dZHQcmPqO+UhMH06zgU4BxZgXKM3O6K86HBP5Yg=,iv:o7I7O01+5twP1HH1eTR7Izquxb7dEiRc5CJxeh9focA=,tag:C3DvNtqOV184sxk3jpw9eQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.1
+    version: 3.7.3
