Use debug image

--- a/cluster/apps/database/postgres/helm-release.yaml
+++ b/cluster/apps/database/postgres/helm-release.yaml
@@ -22,6 +22,7 @@ spec:
       registry: docker.io
       repository: bitnami/postgresql
       tag: 14.9.0
+      debug: true
     global:
       postgresql:
         auth:
