Update miniflux secrets

--- a/cluster/apps/miniflux/miniflux-secrets.sops.yaml
+++ b/cluster/apps/miniflux/miniflux-secrets.sops.yaml
@@ -5,11 +5,12 @@ metadata:
     name: miniflux-secrets
     namespace: miniflux
 stringData:
-    username: ENC[AES256_GCM,data:oEzI3ZR/tGCE+1Bw4A==,iv:4KKSykBnC50XlQik1oU8VxPfTHfQBqV7eA38Po69ZoA=,tag:2UlocObg+S3T7JtRnjz8BA==,type:str]
-    password: ENC[AES256_GCM,data:ZVx1dM1aXqtNzKnbQgIy5cbcN5adCn48,iv:ev+nM/VJSGsahPncMcXiNLFsmLr/lZqBOeZeGVaDjTQ=,tag:pb+c97XY2v7CRePbVQ8ELQ==,type:str]
-    base_url: ENC[AES256_GCM,data:FKBsVoRiiwdh6VfFx4ejMwJ0dseVL22t,iv:1Esx73NFC7yeXTNtipCM7ggIQ2v0tiwUcMvDlLzM6oU=,tag:gVs2XX8WlP3iiLHJF44Rnw==,type:str]
-    postgres_password: ENC[AES256_GCM,data:wqPibD3zcMH4phNjAXObMLL5TZbaWVk=,iv:Ih1WbTqPWRWjpeNpKMVsZH7C1x48aENbeaUYr/p+a0M=,tag:GuI0RVSWxbr6lBHYpShBCw==,type:str]
-    database_url: ENC[AES256_GCM,data:DerU2ypCV2Y2WAuNem3bRiqIB6rM7M/ULUEglMe8/n39ZockKkHsS0SAcJM/+u3OzphAYWKTupam2ffhD90DxZ/UpoNLhwaOuiOWvmqMy4ZEHQrALD9K/g==,iv:UNcKgiu2wz84hApJorZ6APG4Amc/FpDnqMrQE1+i474=,tag:U5w+Wym85KF6y64cGy6Eiw==,type:str]
+    username: ENC[AES256_GCM,data:4vnS/oXvE7XscTj05Q==,iv:5Jm9wF27n0TSXtP39W8lrI9p31lxxwl1YEo7zRDpdtc=,tag:B+PCrKO4AJoGm9nHt7g0ZQ==,type:str]
+    password: ENC[AES256_GCM,data:b09EOjRfYkUQSb5+m2S8O6PaCbjua/yI,iv:BR9/rZ3y050sroxBCESLvO/yFxxVshO1Hv9v0S0Ag+8=,tag:v62RXEICDpVtcG02hoBPTA==,type:str]
+    base_url: ENC[AES256_GCM,data:pyNcCGAuOB/+2iXvITzI9bTl/g0J3KEA,iv:MT4soJbFH3uKG3xFGNDtLVoAr0Jkcm1KSefRipKuN84=,tag:uKA7F/nzHVXu6s2wrosTWw==,type:str]
+    #ENC[AES256_GCM,data:QVFwrH2E4qDO4Obj0+OSNbtMz/Ejtg9er6aDYzo3xUYTUiHk18MJ4Smn,iv:kEOT4slIxYUjeGeJon21laO8cnYuX1vbf8vEKCUufSs=,tag:YTDhiP/80cVImM8tB8UheQ==,type:comment]
+    postgres_password: ENC[AES256_GCM,data:+FT0lyw6lcTUBa1ygp9X0fQFQ387hWE4UEu5RlZItS4=,iv:6uZmupKw4l2UpLLKCDcftsPlbvWb4MPhM0lDgN5X/uw=,tag:J5gM6d5/MG0MRzGmbg+Urw==,type:str]
+    database_url: ENC[AES256_GCM,data:rHSSnhjduqZ/SwsnSJ2mk8n243+PdFl3DR6XgMA3XLJkFYTA6RCOTBJiwsPjZCRz6zKNzQJeTavMlhmyaG/dJUkAkTSEKn1w3gTFPbsQvJKbdzwDJ123d8X6W05HCBaWfyd8GsKM8NlL83xXcFGbN89Ejw==,iv:6IEOZ7DjEgkxnDznnvyXFZiXbWFafAddeBgpMeHiL14=,tag:tkLxKCthINnnz6ZjLm9w4g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -19,14 +20,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvL0dnTmwvZFpkaUlJMlJL
-            SlkxMVlOREtVQURRNkV4ZTlRTm91WEc3Y0ZZCnVyekp1cG9NR3FDMjhlQTl6ZVJL
-            eTdzb1R2Nk5DV1BsVkErYkhRSWU2UWcKLS0tIFJkRjRFaFp5YlBmeDRPSXQ0aXkx
-            TGxlS0V6Z3l3RlZKekNETm5RNFFVemMKYy3OiQ/4ZH2ByNLHr0VwC/ZNVoOeZakS
-            MTirz2G5u43PEe2qHJLTUbCtop3WKxjx1qIiKLciGiPlwbGMGE8cWQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkSkpZMEk0ekdpVVpzRUpR
+            bzVBQ0hHTFk1MXU3aFVCbG5QOWkrT2NHbVFFClpHbDZPWEVZTDE5VncyS1R3NVEv
+            NjNUOVB0RFd2dzJXRmlpTExrbzNyZmcKLS0tIGZWOFY5SmdGNEZSUlNPTThhL0ZT
+            M00wL21PSkUreEdmMnNBVDhHeHExYmcKvPmg5BnTtq698z9tY21UDJYALcHHdHxS
+            qtxhkyeGYrjOEOHA9ABTqX3pdaQANzPc2xarg6cz8orrLlrT5rBKCA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-13T14:50:31Z"
-    mac: ENC[AES256_GCM,data:ciEqInjMBCFhMYka51RNyCdSz+nariE5EKdpmDNzfprsABat6PCBJgWUAmLPQBSJPl595cX5z8AmDjdMt64/LGFnrsk5KqtSr674KmuATFKbPPPwv/EVB7eTr7wXssGlCUw49Sz/kPwPPMAZ8IIImp17Py2A09GAan8a+NfPo/g=,iv:qphDmFC9Rs/H0BnSmBfgSTd42yHHw43WyusPd8adKJA=,tag:3EroSJLgqkXO+/9OyW8y3A==,type:str]
+    lastmodified: "2023-09-29T16:48:21Z"
+    mac: ENC[AES256_GCM,data:MzB2geI931upgo+rAOi4ie8Udj7+Xh4pszal+xmh1pCSRPMRnv6wm4JTtuvj9gkPq7rLvl318VJi3l23h32weP79oa0zmmpCWoDWg1vAkyK1Vz/9axzN6DlZ7zisEG1YMWjfuqrPZKaZRtYFNWb6ZN/6NDjATj1zX2xbJjbZxSE=,iv:QWFPIse7VnYUukKE+MnX7y3lfiIUf+ej/q+8fcstXR8=,tag:57jdaHQRpE3SbDfGuyWqvA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.8.0
