Fix postgres URL

--- a/cluster/apps/miniflux/miniflux-secrets.sops.yaml
+++ b/cluster/apps/miniflux/miniflux-secrets.sops.yaml
@@ -5,12 +5,12 @@ metadata:
     name: miniflux-secrets
     namespace: miniflux
 stringData:
-    username: ENC[AES256_GCM,data:4vnS/oXvE7XscTj05Q==,iv:5Jm9wF27n0TSXtP39W8lrI9p31lxxwl1YEo7zRDpdtc=,tag:B+PCrKO4AJoGm9nHt7g0ZQ==,type:str]
-    password: ENC[AES256_GCM,data:b09EOjRfYkUQSb5+m2S8O6PaCbjua/yI,iv:BR9/rZ3y050sroxBCESLvO/yFxxVshO1Hv9v0S0Ag+8=,tag:v62RXEICDpVtcG02hoBPTA==,type:str]
-    base_url: ENC[AES256_GCM,data:pyNcCGAuOB/+2iXvITzI9bTl/g0J3KEA,iv:MT4soJbFH3uKG3xFGNDtLVoAr0Jkcm1KSefRipKuN84=,tag:uKA7F/nzHVXu6s2wrosTWw==,type:str]
-    #ENC[AES256_GCM,data:QVFwrH2E4qDO4Obj0+OSNbtMz/Ejtg9er6aDYzo3xUYTUiHk18MJ4Smn,iv:kEOT4slIxYUjeGeJon21laO8cnYuX1vbf8vEKCUufSs=,tag:YTDhiP/80cVImM8tB8UheQ==,type:comment]
-    postgres_password: ENC[AES256_GCM,data:+FT0lyw6lcTUBa1ygp9X0fQFQ387hWE4UEu5RlZItS4=,iv:6uZmupKw4l2UpLLKCDcftsPlbvWb4MPhM0lDgN5X/uw=,tag:J5gM6d5/MG0MRzGmbg+Urw==,type:str]
-    database_url: ENC[AES256_GCM,data:rHSSnhjduqZ/SwsnSJ2mk8n243+PdFl3DR6XgMA3XLJkFYTA6RCOTBJiwsPjZCRz6zKNzQJeTavMlhmyaG/dJUkAkTSEKn1w3gTFPbsQvJKbdzwDJ123d8X6W05HCBaWfyd8GsKM8NlL83xXcFGbN89Ejw==,iv:6IEOZ7DjEgkxnDznnvyXFZiXbWFafAddeBgpMeHiL14=,tag:tkLxKCthINnnz6ZjLm9w4g==,type:str]
+    username: ENC[AES256_GCM,data:hVz8CrsthcZifMBRIg==,iv:nYWRMbPmevO50jT4TtnPAZBRPFRjBrRZmqhywyVyuSc=,tag:oxJzaEgVIEWfSpOEaoUO1g==,type:str]
+    password: ENC[AES256_GCM,data:b4WuhR4lRBt0ME0HQZ4SwfH0GMW+17UI,iv:SJo0DOt9OpjsFXClMscmSeDaMpuv6hYtZcHkJayrU+k=,tag:KFjl7de1s/A4BaSqvhgyJQ==,type:str]
+    base_url: ENC[AES256_GCM,data:9qESVrl64QWInDs3BVWoLDPIXTfMVD5B,iv:XKUb3pXQoQ/hk5cwSDMIUFFGtvx6vF90ROqhPmPR4K0=,tag:cq6FrWKnVKB4a+uCaK0w6Q==,type:str]
+    #ENC[AES256_GCM,data:0jH/J8N3knq/dPrmLdDQ5AdEobRcWetFoVLJw+BNAPIBp4vWbHvsY3vC,iv:1L4r7VnDqS5ImO+9cJWgM3DiVdqq1zJj+D4f+thtzUY=,tag:vIslYAIrWiasMt91CC7OYQ==,type:comment]
+    postgres_password: ENC[AES256_GCM,data:K3FksmS9fVtSerItDaNywBlBn8z9qxIm+H/BfUvBz+E=,iv:bx9xGgIxFNAkv1hddue9mgRqvtPY0yC0TcEPEPdHJ30=,tag:+W+5AfkEYWHv3OQbWqdHJA==,type:str]
+    database_url: ENC[AES256_GCM,data:wWvSxfWGJLsh2XW1VSEwVHBZTF+Y1vafJZSv540ePN4T3SyVKwY2Lfiu//a+JZ3hb+1k8xAo74xGaZSrzMMurqa320Of7Qj26uH/a80tstgtOjvukczzsMDrceu01sMAQr9sLUcelyFH5I2fkbQ0PLm+zQ==,iv:+aZC7AM8o7fWrkHyS6+43T55nAKhH1YMoCV+/Zzs7O8=,tag:4VePv2GMyIMfO1sA3l/Daw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,14 +20,14 @@ sops:
         - recipient: age1hra9lsurxkx96y9vgckl38ct3x4nkq655nnmfpe2xly93kqypqps0yhwmc
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkSkpZMEk0ekdpVVpzRUpR
-            bzVBQ0hHTFk1MXU3aFVCbG5QOWkrT2NHbVFFClpHbDZPWEVZTDE5VncyS1R3NVEv
-            NjNUOVB0RFd2dzJXRmlpTExrbzNyZmcKLS0tIGZWOFY5SmdGNEZSUlNPTThhL0ZT
-            M00wL21PSkUreEdmMnNBVDhHeHExYmcKvPmg5BnTtq698z9tY21UDJYALcHHdHxS
-            qtxhkyeGYrjOEOHA9ABTqX3pdaQANzPc2xarg6cz8orrLlrT5rBKCA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWTFMweU9oSTFHMm5IQzRT
+            Skg1dUJXKzBxeVdUQmpLTFhUL0xIOEJUVHljCmxnTkN2em1ucThxaUVrY0FpRThB
+            bzF6Tm5WUldtSE1HWjErcUNWbEdoWEkKLS0tIGFxMnBwYmx0UGF3V3NtL04vTXli
+            ajV0TkdudCtBYk1Tc2NOOTU5RUpGcHMKJYdDOehjLCX0yXdZT1m5odEPGYOIy2tb
+            qGkmAeBmFBj09iAbA5UU98WQoS85IIAhmBd9Ye5JQQznVUtvifsSlQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-29T16:48:21Z"
-    mac: ENC[AES256_GCM,data:MzB2geI931upgo+rAOi4ie8Udj7+Xh4pszal+xmh1pCSRPMRnv6wm4JTtuvj9gkPq7rLvl318VJi3l23h32weP79oa0zmmpCWoDWg1vAkyK1Vz/9axzN6DlZ7zisEG1YMWjfuqrPZKaZRtYFNWb6ZN/6NDjATj1zX2xbJjbZxSE=,iv:QWFPIse7VnYUukKE+MnX7y3lfiIUf+ej/q+8fcstXR8=,tag:57jdaHQRpE3SbDfGuyWqvA==,type:str]
+    lastmodified: "2023-09-29T16:57:04Z"
+    mac: ENC[AES256_GCM,data:d9XTxM7aL+53kKnZ/c8kdZTVOt9htM7K42r3ZDPMlebRdl0RlxWge7YEk6QWKcOOqCfEI2brF4MEbof8e1tAZ9NvZVlONImvIZdY2pfx77QxKATCB35SBCzh5kBtJurPzuLHVirC/jGso/AZ8gJuvtBz2SJWDzqt1rBCvur2sSs=,iv:yDbBn/Id3wuPlpoclHsYZmzX/vAfE7/0iiJljUbaYwI=,tag:hRysYcnCI2huTAAlTgRS+Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
