Disable postgres db

--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -67,7 +67,7 @@ spec:
         type: hostPath
         hostPath: /path/to/device
     postgresql:
-      enabled: true
+      enabled: false
       debug: true
       image:
         repository: postgres
