--- a/cluster/apps/pihole/pihole/helm-release.yaml
+++ b/cluster/apps/pihole/pihole/helm-release.yaml
@@ -34,10 +34,10 @@ spec:
         memory: 90Mi
       limits:
         memory: 160Mi
-    DNS1: "208.67.222.222"
-    #DNS2: "1.1.1.1"
-    DNS2: "2620:119:35::35"
-    #DNS4: "2606:4700:4700::1111"
+    # DNS1: "208.67.222.222"
+    # #DNS2: "1.1.1.1"
+    # DNS2: "2620:119:35::35"
+    # #DNS4: "2606:4700:4700::1111"
     extraEnvVars:
       WEBTHEME: default-dark
       WEBUIBOXEDLAYOUT: boxed
@@ -297,6 +297,7 @@ spec:
     # networking config
     serviceDns:
       type: LoadBalancer
+      port: 5053
       annotations:
         metallb.universe.tf/allow-shared-ip: pihole-svc
       loadBalancerIP: 192.168.178.202
