--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - descheduler-charts.yaml
   - external-dns-charts.yaml
   - firefly-iii-charts.yaml
+  - gabe565-charts.yaml
   - grafana-charts.yaml
   - hajimari-charts.yaml
   - infracloudio-charts.yaml
