--- a/cluster/base/flux-system/kustomization.yaml
+++ b/cluster/base/flux-system/kustomization.yaml
@@ -23,3 +23,4 @@ resources:
   - ./charts/helm/weave-gitops.yaml
   - ./charts/helm/mondoo-charts.yaml
   - ./charts/helm/rocketchat-charts.yaml
+  - ./charts/helm/gabe565-charts.yaml
