Dont force https

--- a/cluster/core/adguard/helm-release.yaml
+++ b/cluster/core/adguard/helm-release.yaml
@@ -141,7 +141,7 @@ spec:
         - '0.0.0.0:3000'
         secure_addresses: []
         timeout: 5s
-        force_https: true
+        force_https: false
       log:
         verbose: true
       users: []
