--- a/cluster/core/adguard/helm-release.yaml
+++ b/cluster/core/adguard/helm-release.yaml
@@ -120,8 +120,8 @@ spec:
     # @default -- See [values.yaml](./values.yaml)
     config: |
       dns:
-        addresses:
-        - '0.0.0.0:53'
+        bind_hosts:
+        - '0.0.0.0'
         bootstrap_dns:
         - '9.9.9.10'
         - '149.112.112.10'
@@ -137,11 +137,7 @@ spec:
         pprof:
           enabled: true
           port: 6060
-        addresses:
-        - '0.0.0.0:3000'
-        secure_addresses: []
-        timeout: 5s
-        force_https: false
+        address: '0.0.0.0:3000'
       log:
         verbose: true
       users: []
